Add plot validation of ensemble experiment

--- a/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-voting.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-voting.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "74685d25",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "f9ccf8a6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "12ee59d0",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "910686b5",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/mticona/Documents/tesis/licentiate-thesis-repo\n"
+      "/home/belu/VS Workplace/licentiate-thesis-repo\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "2bebae69",
    "metadata": {
     "tags": []
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "ba3550b2",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "42a623b6-f1c0-4d5a-a0cb-f9a46acff672",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "(567, 63)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "27316626-9542-4acd-b1e9-53de4c288359",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "(5077, 63)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "06ca7dec",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1484a55b",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "3f745d5c-20e9-46fc-8290-821fc5cc3cc2",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "f533d6e7",
    "metadata": {},
    "outputs": [],
@@ -472,6 +472,42 @@
     "    \n",
     "    return voting_clf\n",
     "\n",
+    "def evaluation_bagging(base_estimators, df, df_test):\n",
+    "    df_reports = []\n",
+    "    X, y = split_X_y(df)\n",
+    "    X_test, y_test = split_X_y(df_test)\n",
+    "    \n",
+    "    for model_name, args in base_estimators.items():\n",
+    "        model = make_model(models['bagg'], args)\n",
+    "        pipeline_steps = [\n",
+    "            ('std', StandardScaler()), \n",
+    "            ('model', model)\n",
+    "            ]\n",
+    "        pipeline = Pipeline(steps=pipeline_steps)\n",
+    "        \n",
+    "        pipeline.fit(X, y)\n",
+    "        y_pred = pipeline.predict(X_test)\n",
+    "        \n",
+    "        scoring={\n",
+    "                'recall_0': recall_score(y_test, y_pred, average = 'macro', labels = [0]),\n",
+    "                'recall_1': recall_score(y_test, y_pred, average = 'macro', labels = [1]),\n",
+    "                'f1_0': f1_score(y_test, y_pred, average = 'macro', labels = [0]),\n",
+    "                'f1_1': f1_score(y_test, y_pred, average = 'macro', labels = [1]),\n",
+    "                'precision_0': precision_score(y_test, y_pred, average = 'macro', labels = [0]),\n",
+    "                'precision_1': precision_score(y_test, y_pred, average = 'macro', labels = [1]),\n",
+    "                'recall': recall_score(y_test, y_pred, average = 'macro'),\n",
+    "                'f1': f1_score(y_test, y_pred, average = 'macro'),\n",
+    "                'precision': precision_score(y_test, y_pred, average = 'macro'),\n",
+    "                'matthew': matthews_corrcoef(y_test, y_pred)\n",
+    "        }\n",
+    "        \n",
+    "        scoring['estimator'] = model_name + '_bagging'\n",
+    "        \n",
+    "        df_reports.append(pd.DataFrame(scoring, index=[0])) \n",
+    "        \n",
+    "    res = pd.concat(df_reports, axis=0)\n",
+    "    return res\n",
+    "\n",
     "def run_evaluation_voting(models_params, df, df_test, \n",
     "                          voting='soft',\n",
     "                          file_name='no_file_name.csv'):\n",
@@ -491,7 +527,9 @@
     "        pipeline.fit(X, y)\n",
     "        y_pred = pipeline.predict(X_test)\n",
     "        \n",
-    "        df_class = pd.DataFrame.from_dict(classification_report_imbalanced(y_test, y_pred,\n",
+    "        \n",
+    "        \n",
+    "        df_class = pd.DataFrame.from_dict(precision_recall_fscore_support(y_test, y_pred,\n",
     "                                                                   target_names=['No cristaliza', 'Cristaliza'],\n",
     "                                                                   output_dict=True)).T\n",
     "\n",
@@ -506,7 +544,7 @@
     "    clf_voting = full_voting_pipeline(models_params, df)\n",
     "    y_pred = clf_voting.predict(X_test)\n",
     "    \n",
-    "    df_class = pd.DataFrame.from_dict(classification_report_imbalanced(y_test, y_pred,\n",
+    "    df_class = pd.DataFrame.from_dict(precision_recall_fscore_support(y_test, y_pred,\n",
     "                                                                   target_names=['No cristaliza', 'Cristaliza'],\n",
     "                                                                   output_dict=True)).T\n",
     "\n",
@@ -527,14 +565,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "id": "b8fbe7d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "grid_params_lg_default = dict(\n",
     "                      dual=False,\n",
     "                      class_weight='balanced',\n",
@@ -572,11 +607,6 @@
     "                            weights='distance')\n",
     "\n",
     "\n",
-    "grid_params_bagg_default = dict(\n",
-    "                            model__n_jobs=-1,\n",
-    "                            model__weights='distance',\n",
-    ")\n",
-    "\n",
     "k_splits = 3\n",
     "\n",
     "k_fold_config_default = {\n",
@@ -594,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "id": "8e932a3f",
    "metadata": {},
    "outputs": [],
@@ -643,7 +673,7 @@
     "# Bagging base estimator\n",
     "\n",
     "grid_params_bagg = {}\n",
-    "#grid_params_bagg['n_estimators'] = 200\n",
+    "grid_params_bagg['n_estimators'] = 300\n",
     "#grid_params_bagg['base_estimator'] = [make_model(models[base_estimator_name], model_config=base_estimator_param)]\n",
     "grid_params_bagg['n_jobs'] = -1\n",
     "grid_params_bagg['random_state'] = SEED\n",
@@ -658,7 +688,13 @@
     "    'rf': grid_params_rf,\n",
     "    'gbc': grid_params_gbc,\n",
     "    'dt': grid_param_dt\n",
-    "    \n",
+    "}\n",
+    "\n",
+    "base_estimators_bagging = {\n",
+    "    'knn': grid_params_knn,\n",
+    "    'lg': grid_params_lg,\n",
+    "    'svm_linear': grid_params_svm_linear,\n",
+    "    'dt': grid_param_dt\n",
     "}\n",
     "\n",
     "models_params_ensamble_estimators = {\n",
@@ -669,68 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "id": "4c74095c-647a-4922-9fd2-2323e62489bd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'knn': {'n_jobs': -1, 'weights': 'distance', 'n_neighbors': 6},\n",
-       " 'lg': {'dual': False,\n",
-       "  'class_weight': 'balanced',\n",
-       "  'penalty': 'l1',\n",
-       "  'random_state': 2,\n",
-       "  'solver': 'saga',\n",
-       "  'n_jobs': -1,\n",
-       "  'C': 0.15,\n",
-       "  'max_iter': 3000},\n",
-       " 'svm_linear': {'class_weight': 'balanced',\n",
-       "  'degree': 3,\n",
-       "  'probability': True,\n",
-       "  'random_state': 2,\n",
-       "  'C': 10,\n",
-       "  'kernel': 'linear'},\n",
-       " 'svm_poly': {'class_weight': 'balanced',\n",
-       "  'degree': 3,\n",
-       "  'probability': True,\n",
-       "  'random_state': 2,\n",
-       "  'C': 10,\n",
-       "  'kernel': 'poly'},\n",
-       " 'svm_rbf': {'class_weight': 'balanced',\n",
-       "  'degree': 3,\n",
-       "  'probability': True,\n",
-       "  'random_state': 2,\n",
-       "  'C': 50,\n",
-       "  'kernel': 'rbf'},\n",
-       " 'rf': {'min_samples_split': 10,\n",
-       "  'min_samples_leaf': 3,\n",
-       "  'warm_start': False,\n",
-       "  'n_estimators': 60,\n",
-       "  'class_weight': 'balanced',\n",
-       "  'max_depth': 8},\n",
-       " 'gbc': {'subsample': 0.9,\n",
-       "  'min_samples_split': 7,\n",
-       "  'min_samples_leaf': 5,\n",
-       "  'random_state': 2,\n",
-       "  'n_estimators': 110,\n",
-       "  'max_depth': 7,\n",
-       "  'learning_rate': 0.15},\n",
-       " 'dt': {'max_depth': 7, 'class_weight': 'balanced'}}"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "models_params_simple_estimators"
+    "#models_params_simple_estimators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "8fead946-d24b-4091-85c3-424639e708d2",
    "metadata": {},
    "outputs": [],
@@ -747,48 +732,25 @@
     "        #df_cross_val['random_state'] = seed\n",
     "        cross_val_results.append(df_cross_val)\n",
     "    df_merged = pd.concat(cross_val_results, axis=0)\n",
-    "    df_merged.to_csv(results_path+results, index=None)\n",
+    "    df_merged.to_csv(results_path+file_name, index=None)\n",
     "    return df_merged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "id": "cf4feb11-cdad-4a9c-996f-1bd899f13e77",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [75]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_best_single_estimator \u001b[38;5;241m=\u001b[39m \u001b[43mreport_cross_validation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels_params_simple_estimators\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                                                   \u001b[49m\u001b[43mdf_test_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                                                   \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msingle_estimators_validation_seed_from_1_5.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [74]\u001b[0m, in \u001b[0;36mreport_cross_validation\u001b[0;34m(models_params, df, file_name)\u001b[0m\n\u001b[1;32m     11\u001b[0m     cross_val_results\u001b[38;5;241m.\u001b[39mappend(df_cross_val)\n\u001b[1;32m     12\u001b[0m df_merged \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(cross_val_results, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m df_merged\u001b[38;5;241m.\u001b[39mto_csv(results_path\u001b[38;5;241m+\u001b[39m\u001b[43mresults\u001b[49m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df_merged\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_best_single_estimator = report_cross_validation(models_params_simple_estimators,\n",
-    "                                                   df_test_train,\n",
-    "                                                   file_name='single_estimators_validation_seed_from_1_5.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68f33866-7d1b-4ec0-9748-7598207f8dab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_best_single_estimator"
+    "#df_best_single_estimator = report_cross_validation(models_params_simple_estimators,\n",
+    "#                                                   df_test_train,\n",
+    "#                                                   file_name='single_estimators_validation_seed_from_1_5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 87,
    "id": "417d867d",
    "metadata": {},
    "outputs": [],
@@ -797,6 +759,153 @@
     "    cm = confusion_matrix(y, y_pred)\n",
     "    return {'tn': cm[0, 0], 'fp': cm[0, 1],\n",
     "            'fn': cm[1, 0], 'tp': cm[1, 1]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "379a25fa-02ff-474e-9470-4feb23b848da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_path = 'results/ensamble/bagging_evaluation/'\n",
+    "\n",
+    "def run_evaluation_bagging_pipeline(bagging_template, base_estimators, df, df_test, file_name='no_name.csv'):\n",
+    "    model_bagging = {}\n",
+    "    for base_name, base_args in base_estimators.items():\n",
+    "        bagging_args = bagging_template.copy()\n",
+    "        bagging_args['base_estimator'] = make_model(models[base_name], model_config=base_args)\n",
+    "        model_bagging[base_name] = bagging_args\n",
+    "    res = evaluation_bagging(base_estimators=model_bagging, df=df, df_test=df_test)\n",
+    "    res.to_csv(results_path+file_name, index=None)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "199146ce-916e-4ffd-a1af-9974a5ff2987",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>recall_0</th>\n",
+       "      <th>recall_1</th>\n",
+       "      <th>f1_0</th>\n",
+       "      <th>f1_1</th>\n",
+       "      <th>precision_0</th>\n",
+       "      <th>precision_1</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>matthew</th>\n",
+       "      <th>estimator</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.936264</td>\n",
+       "      <td>0.642857</td>\n",
+       "      <td>0.925081</td>\n",
+       "      <td>0.676056</td>\n",
+       "      <td>0.914163</td>\n",
+       "      <td>0.712871</td>\n",
+       "      <td>0.789560</td>\n",
+       "      <td>0.800569</td>\n",
+       "      <td>0.813517</td>\n",
+       "      <td>0.602602</td>\n",
+       "      <td>knn_bagging</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.672527</td>\n",
+       "      <td>0.830357</td>\n",
+       "      <td>0.784615</td>\n",
+       "      <td>0.525424</td>\n",
+       "      <td>0.941538</td>\n",
+       "      <td>0.384298</td>\n",
+       "      <td>0.751442</td>\n",
+       "      <td>0.655020</td>\n",
+       "      <td>0.662918</td>\n",
+       "      <td>0.404794</td>\n",
+       "      <td>lg_bagging</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.973626</td>\n",
+       "      <td>0.169643</td>\n",
+       "      <td>0.894046</td>\n",
+       "      <td>0.265734</td>\n",
+       "      <td>0.826493</td>\n",
+       "      <td>0.612903</td>\n",
+       "      <td>0.571635</td>\n",
+       "      <td>0.579890</td>\n",
+       "      <td>0.719698</td>\n",
+       "      <td>0.250902</td>\n",
+       "      <td>svm_linear_bagging</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.762637</td>\n",
+       "      <td>0.848214</td>\n",
+       "      <td>0.847375</td>\n",
+       "      <td>0.603175</td>\n",
+       "      <td>0.953297</td>\n",
+       "      <td>0.467980</td>\n",
+       "      <td>0.805426</td>\n",
+       "      <td>0.725275</td>\n",
+       "      <td>0.710638</td>\n",
+       "      <td>0.507285</td>\n",
+       "      <td>dt_bagging</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   recall_0  recall_1      f1_0      f1_1  precision_0  precision_1    recall  \\\n",
+       "0  0.936264  0.642857  0.925081  0.676056     0.914163     0.712871  0.789560   \n",
+       "0  0.672527  0.830357  0.784615  0.525424     0.941538     0.384298  0.751442   \n",
+       "0  0.973626  0.169643  0.894046  0.265734     0.826493     0.612903  0.571635   \n",
+       "0  0.762637  0.848214  0.847375  0.603175     0.953297     0.467980  0.805426   \n",
+       "\n",
+       "         f1  precision   matthew           estimator  \n",
+       "0  0.800569   0.813517  0.602602         knn_bagging  \n",
+       "0  0.655020   0.662918  0.404794          lg_bagging  \n",
+       "0  0.579890   0.719698  0.250902  svm_linear_bagging  \n",
+       "0  0.725275   0.710638  0.507285          dt_bagging  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_evaluation_bagging_pipeline(bagging_template=grid_params_bagg,\n",
+    "                            base_estimators=base_estimators_bagging,\n",
+    "                           df=df_test_train, df_test=df_test,\n",
+    "                           file_name=\"evaluation_baggging_models.csv\")"
    ]
   },
   {
@@ -5060,9 +5169,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5074,7 +5183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
