--- a/notebooks/2-ensembles/2.2-mbto-single-optimized-estimators.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-single-optimized-estimators.ipynb
@@ -569,7 +569,7 @@
     "# Bagging base estimator\n",
     "\n",
     "grid_params_bagg = {}\n",
-    "#grid_params_bagg['n_estimators'] = 200\n",
+    "grid_params_bagg['n_estimators'] = 300\n",
     "#grid_params_bagg['base_estimator'] = [make_model(models[base_estimator_name], model_config=base_estimator_param)]\n",
     "grid_params_bagg['n_jobs'] = -1\n",
     "grid_params_bagg['random_state'] = SEED\n",
@@ -4865,9 +4865,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4879,7 +4879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
