--- a/notebooks/4-metrics-errors/3.0-mbto-metrics-synthetic-data.ipynb
+++ b/notebooks/4-metrics-errors/3.0-mbto-metrics-synthetic-data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,27 +427,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_names_for_plot():\n",
-    "    metrics = ['precision_macro',\n",
-    "            'precision_micro',\n",
-    "            'recall_macro',\n",
-    "            'recall_micro',\n",
-    "            'f1_weighted',\n",
-    "            'recall_weighted',\n",
-    "            'precision_weighted',\n",
-    "            'f1_macro',\n",
-    "            'matthew']\n",
-    "        \n",
+    "metrics = ['precision_macro',\n",
+    "        'precision_micro',\n",
+    "        'recall_macro',\n",
+    "        'recall_micro',\n",
+    "        'f1_weighted',\n",
+    "        'recall_weighted',\n",
+    "        'precision_weighted',\n",
+    "        'f1_macro',\n",
+    "        'matthew']\n",
+    "\n",
+    "def map_names_for_plot(cols_metrics=metrics):\n",
     "    map_names = { metric: metric.replace(\"precision\", \"Precision\")\n",
     "                .replace(\"_\", \" \")\n",
     "                .replace(\"f1\", \"F1\")\n",
     "                .replace(\"recall\", \"Recall\")   \n",
     "                .replace(\"matthew\", \"Matthew\")   \n",
-    "                for metric in metrics}\n",
+    "                for metric in cols_metrics}\n",
     "    map_names[\"percentil_tp\"] = 'Percentil'\n",
     "    map_names[\"imbalance\"] = r'$\\delta$'\n",
     "    map_names[\"exp\"] = \"Experimental\"\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,6 @@
     "    \n",
     "    with plt.style.context(['science', 'bright']):\n",
     "        bright = plot_utils.tol_cset(\"bright\")\n",
-    "\n",
     "    ## Opción scatter\n",
     "    #g = sns.relplot(data=df, x=map_cols[x_metric], y=map_cols[y_metric],\n",
     "    #                hue=map_cols[\"percentil_tp\"], col=map_cols[\"imbalance\"])\n",
@@ -844,8 +843,75 @@
     "    plot_merged_files_from(path_src, plot_fun, plot_args={\n",
     "                                                            \"metrics\": [\"recall_macro\",\"precision_macro\", \"f1_macro\", \"matthew\"],\n",
     "                                                            \"output_path\": output_path\n",
+    "                                                            })\n",
+    "\n",
+    "    \n",
+    "def plot_joint_with_evaluation(df, plot_folder, plot_args={}):\n",
+    "    sns.set_context(\"poster\")\n",
+    "    map_cols = map_names_for_plot()\n",
+    "    x_metric = plot_args[\"x_metric\"]\n",
+    "    hue_col = \"percentil_tp\"\n",
+    "    \n",
+    "    df=df[df['n_size']==600]\n",
+    "    df=df[df['imbalance']=='Alto']\n",
+    "    x_metric = plot_args[\"x_metric\"]\n",
+    "    y_metric = plot_args[\"y_metric\"]\n",
+    "    df = df.rename(columns=map_cols)\n",
+    "    \n",
+    "    df_evaluation = pd.read_csv(plot_args['evaluation_dot_path'])\n",
+    "    map_cols = map_names_for_plot(df_evaluation.columns)\n",
+    "    \n",
+    "    df_evaluation = df_evaluation.rename(columns=map_cols)\n",
+    "    \n",
+    "    df_evaluation = df_evaluation.rename(columns={metric: metric+' macro' for metric in ['Recall', 'F1', 'Precision', 'Matthew']})\n",
+    "    \n",
+    "    with plt.style.context(['science', 'bright']):\n",
+    "        bright = plot_utils.tol_cset(\"bright\")\n",
+    "        print(df.columns, df_evaluation.columns)\n",
+    "        print(x_metric, map_cols)\n",
+    "        \n",
+    "        g = sns.JointGrid(data=df, x=map_cols[x_metric], y=map_cols[y_metric], hue=map_cols[hue_col],\n",
+    "                          palette=[bright.red, bright.blue, bright.green],\n",
+    "                          height=7\n",
+    "                         )\n",
+    "        \n",
+    "        #g.plot(sns.scatterplot, sns.boxplo)\n",
+    "        g.plot_joint(sns.kdeplot, alpha=.3, fill=True, levels=4)\n",
+    "        #g = g.plot_joint(plt.scatter, color=\".5\", edgecolor=\"white\")\n",
+    "        g.plot_marginals(sns.histplot, kde=True)\n",
+    "        sns.scatterplot(ax=g.ax_joint, data=df_evaluation, x=map_cols[x_metric], y=map_cols[y_metric])\n",
+    "        #g.ax_marg_y.tick_params(which=\"both\", left=False, bottom=False, top=False, right=False)\n",
+    "        #g.ax_marg_x.tick_params(which=\"both\", left=False, bottom=False, top=False, right=False)\n",
+    "        #g.ax_joint.tick_params(which=\"both\", left=False, bottom=False, top=False, right=False)\n",
+    "        ##sns.move_legend(g.ax_joint, \"lower right\", title='Performance',\n",
+    "        #                frameon=True, fontsize=13, title_fontsize='small')\n",
+    "        #plot_variables = plot_args[\"plot_variables\"]\n",
+    "        #plot_title = make_title_from_vars(map_cols, plot_variables)\n",
+    "        \n",
+    "        #plot_folder = Path(plot_folder)\n",
+    "        #plot_folder.mkdir(parents=True, exist_ok=True)\n",
+    "        \n",
+    "\n",
+    "        plot_path = plot_folder / (x_metric + \"_\" + y_metric + \".png\")\n",
+    "        #plt.savefig(plot_path, facecolor='w', transparent=False, dpi=150)\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "## for evaluation plot\n",
+    "def plot_compare_metrics_with_evaluation(path_src, evaluation_dots_path, output_path, plot_fun=plot_scatter):\n",
+    "    plot_merged_files_from(path_src, plot_fun, plot_args={\n",
+    "                                                            \"metrics\": [\"recall_macro\",\"precision_macro\"],#, \"f1_macro\", \"matthew\"],\n",
+    "                                                            \"output_path\": output_path,\n",
+    "                                                            \"evaluation_dot_path\": evaluation_dots_path\n",
     "                                                            })"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -860,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,9 +957,7 @@
     "\n",
     "\n",
     "sns.set_context('poster', font_scale=1)\n",
-    "plot_compare_metrics(\"results_full_model\", \"results_full_exp\", plot_fun=plot_joint) #modelo-exp\n",
-    "\n",
-    "exp_1_agosto_sin_alphas"
+    "#plot_compare_metrics(\"results_full_model\", \"results_full_exp\", plot_fun=plot_joint) #modelo-exp"
    ]
   },
   {
@@ -1024,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,37 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with plt.style.context(['science', 'bright']):\n",
-    "    bright = plot_utils.tol_cset(\"bright\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Bcset(blue='#4477AA', cyan='#66CCEE', green='#228833', yellow='#CCBB44', red='#EE6677', purple='#AA3377', grey='#BBBBBB', black='#000000')"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bright"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,6 +1179,117 @@
     "#for metric in metrics:\n",
     "#plot_distribution(df, metric=metric, plot_name=f'{metric}_distribucion_exp_1.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_dots_path = '../../results/ensamble/bagging_evaluation/evaluation_baggging_models.csv'\n",
+    "saving_folder_plot = '../../figures/ensemble/bagging/evaluation_ensemble'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['tn', 'fp', 'fn', 'tp', '$\\delta$', 'Percentil', 'Precision micro',\n",
+      "       'Precision macro', 'Precision weighted', 'Recall micro', 'Recall macro',\n",
+      "       'Recall weighted', 'F1 macro', 'F1 weighted', 'Matthew', 'm',\n",
+      "       'error_exp', 'error_model'],\n",
+      "      dtype='object') Index(['Recall 0', 'Recall 1', 'F1 0', 'F1 1', 'Precision 0', 'Precision 1',\n",
+      "       'Recall macro', 'F1 macro', 'Precision macro', 'Matthew macro',\n",
+      "       'estimator'],\n",
+      "      dtype='object')\n",
+      "recall_macro {'recall_0': 'Recall 0', 'recall_1': 'Recall 1', 'f1_0': 'F1 0', 'f1_1': 'F1 1', 'precision_0': 'Precision 0', 'precision_1': 'Precision 1', 'recall': 'Recall', 'f1': 'F1', 'precision': 'Precision', 'matthew': 'Matthew', 'estimator': 'estimator', 'percentil_tp': 'Percentil', 'imbalance': '$\\\\delta$', 'exp': 'Experimental', 'model': 'Modelo', 'exp-model': 'Exp-modelo', 'n_size': 'm'}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'recall_macro'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_199434/2046384094.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m                                                   \u001b[0mevaluation_dots_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mevaluation_dots_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                   \u001b[0moutput_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msaving_folder_plot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                                   plot_fun=plot_joint_with_evaluation)\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_199434/2287656839.py\u001b[0m in \u001b[0;36mplot_compare_metrics_with_evaluation\u001b[0;34m(path_src, evaluation_dots_path, output_path, plot_fun)\u001b[0m\n\u001b[1;32m    254\u001b[0m                                                             \u001b[0;34m\"metrics\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"recall_macro\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"precision_macro\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m#, \"f1_macro\", \"matthew\"],\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    255\u001b[0m                                                             \u001b[0;34m\"output_path\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moutput_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 256\u001b[0;31m                                                             \u001b[0;34m\"evaluation_dot_path\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mevaluation_dots_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    257\u001b[0m                                                             })\n",
+      "\u001b[0;32m/tmp/ipykernel_199434/2896352570.py\u001b[0m in \u001b[0;36mplot_merged_files_from\u001b[0;34m(path, plot_fun, plot_args)\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0mplot_variables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"error_model\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiltered_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"error_model\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mplot_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"plot_variables\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplot_variables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mplot_comparision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_fun\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mplot_comparision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_fun\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_199434/2896352570.py\u001b[0m in \u001b[0;36mplot_comparision\u001b[0;34m(df, plot_fun, plot_folder, plot_args)\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0mplot_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"x_metric\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetric_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0mplot_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"y_metric\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetric_y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m         \u001b[0mplot_fun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_199434/2287656839.py\u001b[0m in \u001b[0;36mplot_joint_with_evaluation\u001b[0;34m(df, plot_folder, plot_args)\u001b[0m\n\u001b[1;32m    222\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_metric\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmap_cols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 224\u001b[0;31m         g = sns.JointGrid(data=df, x=map_cols[x_metric], y=map_cols[y_metric], hue=map_cols[hue_col],\n\u001b[0m\u001b[1;32m    225\u001b[0m                           \u001b[0mpalette\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgreen\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m                           \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'recall_macro'"
+     ]
+    }
+   ],
+   "source": [
+    "plot_compare_metrics_with_evaluation(path_src=folder_to_plot, \n",
+    "                                                  evaluation_dots_path=evaluation_dots_path, \n",
+    "                                                  output_path=saving_folder_plot,\n",
+    "                                                  plot_fun=plot_joint_with_evaluation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('results_full_model',\n",
+       " '../../results/ensamble/bagging_evaluation/evaluation_baggging_models.csv',\n",
+       " 'results_full_model_model_plotting',\n",
+       " <function __main__.plot_joint_with_evaluation(df, plot_folder, plot_args={})>)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folder_to_plot, evaluation_dots_path, saving_folder_plot, plot_joint_with_evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
